# pysetup

./: .gitignore  LICENSE  README.md  pyproject.toml  struct.json
pysetup/: asks.py  common.py  exceptions.py  files.py  structure_parser.py
src/pysetup/: __main__.py  common.py  files.py  structure_parser.py
